--- a/src/PictProcess/config.ini
+++ b/src/PictProcess/config.ini
@@ -3,3 +3,6 @@ frequencyPictures = 10
 ;link=20
 link = 0
 ;link = http://192.168.1.22/videostream.cgi?user=admin&pwd=&.mjpg
+
+floucaptFolder = out
+;floucaptFolder = /srv/www/htdocs/floucapt
